# FPSBench

./: .gitignore  CITATION.cff  LICENSE  README.md  index.html  pyproject.toml
.github/workflows/: ci.yml
annotations/: fpsbench_v1.csv  fpsbench_v1.jsonl  fpsbench_v1.schema.json  fpsbench_v1_stats.json
docs/: index.html
docs/static/css/: index.css
examples/: model_adapter_template.py  predictions_template.jsonl  run_random_baseline.sh  run_score_only.sh
fpsbench/: __init__.py  categories.py  io.py  media.py  metrics.py  parsing.py  prompts.py  schema.py  timestamps.py  youtube.py
fpsbench/adapters/: __init__.py  base.py  random_baseline.py
leaderboard/: README.md  app.py  requirements.txt  seed_leaderboard.json
release/: dataset_card.md
scripts/: evaluate.py  ingest_release.py  prepare_dataset.py  push_to_hf.py  score_predictions.py  validate_annotations.py
static/js/: index.js
tests/: test_fpsbench.py
